--- a/todo.html
+++ b/todo.html
@@ -11,16 +11,18 @@
         <div id="myDIV" class="header">
             <h1>To Do List</h1>
             <input type="text" id="todoInput" placeholder="Add something to my list">
-            <span onclick="newTodo()" class="addBtn">Add</span>
+            <span> <button onclick="newTodo()" class="addBtn">Add</button></span>
         </div>
 
         <ul id="todoList">
-            <li>Hit the gym</li>
-            <li class="checked">Pay bills</li>
-            <li>Meet George</li>
-            <li>Buy eggs</li>
-            <li>Read a book</li>
-            <li>Organize office</li>
+            <li class="checked">Create a to do list with HTML</li>
+            <li class="checked">Style the to do list with CSS</li>
+            <li class="checked">Add functionality with Javascript</li>
+            <li>Eat a healthy lunch</li>
+            <li>Read a book about Big O time and space complexities</li>
+            <li>Do laundry</li>
+            <li>Eat a delicious dinner</li>
+            <li>Watch Star Wars</li>
           </ul>
     </div>
 
